argocd/middleware-redirect-scheme.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect-scheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
